polish feature-engineering notebook with thresholds and chart commentary

--- a/notebooks/02_feature_engineering_signals.ipynb
+++ b/notebooks/02_feature_engineering_signals.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "27466d1f",
    "metadata": {},
    "outputs": [
@@ -71,6 +71,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>screener_features</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>screener_snapshots</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -79,10 +83,11 @@
       ],
       "text/plain": [
        "                 name\n",
-       "0  screener_snapshots"
+       "0   screener_features\n",
+       "1  screener_snapshots"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c8703618",
    "metadata": {},
    "outputs": [
@@ -229,7 +234,7 @@
        "4   27.107530        None  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "99daf41a",
    "metadata": {},
    "outputs": [
@@ -295,7 +300,7 @@
        "0         5            5 2025-11-30 2025-11-30"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,6 +343,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d874c118",
+   "metadata": {},
+   "source": [
+    "### Threshold definitions\n",
+    "\n",
+    "To keep the logic transparent, here are the cutoffs we use:\n",
+    "\n",
+    "**Volatility Regime (RV 20d):**\n",
+    "- `< 20%`  → `low`\n",
+    "- `20–40%` → `normal`\n",
+    "- `> 40%`  → `high`\n",
+    "\n",
+    "**Edge Buckets (edge_score):**\n",
+    "- `< 10`   → `quiet`\n",
+    "- `10–25`  → `active`\n",
+    "- `> 25`   → `hot`\n",
+    "\n",
+    "**Liquidity Buckets (volume):**\n",
+    "- `< 1,000,000`        → `thin`\n",
+    "- `1,000,000–10,000,000` → `medium`\n",
+    "- `> 10,000,000`       → `thick`\n",
+    "\n",
+    "These are simple V1 cutoffs we can tune later based on backtest results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8076f770",
    "metadata": {},
    "source": [
@@ -349,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "2f6ce529",
    "metadata": {},
    "outputs": [
@@ -396,7 +428,7 @@
        "1  screener_snapshots"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a5ac9d03",
    "metadata": {},
    "outputs": [
@@ -649,7 +681,7 @@
        "4            NaN       high         hot            thick  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "78242aaa",
    "metadata": {},
    "outputs": [
@@ -739,7 +771,7 @@
        "3       high      active            thick     1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "a1596bbe",
    "metadata": {},
    "outputs": [
@@ -807,8 +839,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11f3848e",
+   "metadata": {},
+   "source": [
+    "**Reading this plot:**  \n",
+    "Right now the distribution is thin because we only have a small sample.  \n",
+    "As more days are loaded, we expect most values to cluster near 0 (small moves vs recent vol)  \n",
+    "with occasional outliers where today’s move is unusually large relative to RV20."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "94a6abca",
    "metadata": {},
    "outputs": [
@@ -875,7 +918,7 @@
        "3     normal      active    1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f37a196b",
    "metadata": {},
    "outputs": [
@@ -926,6 +969,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a8b4918",
+   "metadata": {},
+   "source": [
+    "**Reading this plot:**  \n",
+    "This chart shows how often different volatility regimes (`low`/`normal`/`high`)  \n",
+    "coincide with different edge buckets (`quiet`/`active`/`hot`).  \n",
+    "With more history, this will tell us whether high-volatility environments tend  \n",
+    "to produce more “hot” edge days and where most of our potential trades live."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e5053b25",
    "metadata": {},
    "source": [
@@ -937,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d362984a",
    "metadata": {},
    "outputs": [
@@ -985,7 +1040,7 @@
        "0 2025-11-30 -1.808496     -1.808496            NaN"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "9eb2a1c6",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1076,7 @@
     "    ax1.set_xlabel(\"Date\")\n",
     "\n",
     "    ax2 = ax1.twinx()\n",
-    "    ax2.plot(example[\"run_date\"], example[\"day_pct_vol_5\"], color=\"orange\", label=\"5D vol of Day %\")\n",
+    "    ax2.plot(example[\"run_date\"], example[\"day_pct_vol_5\"], color=\"orange\", label=\"5D vol of Day %\") # type: ignore\n",
     "    ax2.set_ylabel(\"5D std dev (Day %)\")\n",
     "\n",
     "    plt.title(f\"{example_ticker}: 5D Behaviour of Day %\")\n",
@@ -1032,13 +1087,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed16821d",
+   "metadata": {},
+   "source": [
+    "**Reading this plot:**  \n",
+    "The 5-day rolling mean of Day % captures short-term trend,  \n",
+    "while the 5-day rolling volatility captures choppiness.  \n",
+    "In a richer dataset, rising mean with falling volatility would point to  \n",
+    "clean trends; flat mean with high volatility would indicate noisy conditions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f29529c2",
    "metadata": {},
    "outputs": [],
    "source": [
     "con.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7789c3cd",
+   "metadata": {},
+   "source": [
+    "### Close connection\n",
+    "\n",
+    "We close the DuckDB connection so other notebooks and apps can safely write to the database."
    ]
   },
   {
