Add con.close() to Notebook 4

--- a/notebooks/04_rl_environment.ipynb
+++ b/notebooks/04_rl_environment.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "de60bf10",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
        "4            screener_snapshots"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "a32accd7",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "14  False  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "526cd650",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "4      active            thick  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "93f08712",
    "metadata": {},
    "outputs": [
@@ -737,7 +737,7 @@
        "4         hot            thick     -0.578846  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "a354ce39",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
        "4     -0.578846  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "f0eec98a",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "d173cdb9",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
      "output_type": "stream",
      "text": [
       "Steps taken: 4\n",
-      "Total reward from random policy: -1.2369\n"
+      "Total reward from random policy: -0.3773\n"
      ]
     },
     {
@@ -1120,8 +1120,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.859649</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.000000</td>\n",
        "      <td>AMD</td>\n",
        "      <td>2025-11-30</td>\n",
        "    </tr>\n",
@@ -1152,13 +1152,13 @@
       ],
       "text/plain": [
        "   action    reward ticker   run_date\n",
-       "0       1 -0.859649    AMD 2025-11-30\n",
+       "0       0 -0.000000    AMD 2025-11-30\n",
        "1       1 -0.377289   NVDA 2025-11-30\n",
        "2       0 -0.000000    QQQ 2025-11-30\n",
        "3       0 -0.000000    SPY 2025-11-30"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,6 +1191,16 @@
     "    \"ticker\": [i[\"ticker\"] for i in infos],\n",
     "    \"run_date\": [i[\"run_date\"] for i in infos],\n",
     "}).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b0f626ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.close()"
    ]
   },
   {
