corrected Pylance error

--- a/notebooks/05_baseline_policies.ipynb
+++ b/notebooks/05_baseline_policies.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "aa5f0a0e",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
     "\n",
     "# Close old connection if needed\n",
     "try:\n",
-    "    con.close()\n",
+    "    con.close() # type: ignore\n",
     "except:\n",
     "    pass\n",
     "\n",
